[gd_scene load_steps=23 format=2]

[ext_resource path="res://worlds/worldSelect/objects/custumizer/custumizer.gd" type="Script" id=1]
[ext_resource path="res://entities/classes/interactComponent/interactBallon.tscn" type="PackedScene" id=2]
[ext_resource path="res://worlds/worldSelect/objects/custumizer/custumizer.png" type="Texture" id=3]
[ext_resource path="res://entities/player/shaders/hueShifter.gdshader" type="Shader" id=4]
[ext_resource path="res://entities/player/powerStates/normal/sprites/lodrofo/IDLE/lodrofoIdle.png" type="Texture" id=5]
[ext_resource path="res://gameplay/themes/panel.tres" type="StyleBox" id=6]
[ext_resource path="res://worlds/worldSelect/objects/custumizer/ColorButton/colorButton.tscn" type="PackedScene" id=7]
[ext_resource path="res://entities/player/HUD/sprites/closeButton.png" type="Texture" id=8]
[ext_resource path="res://worlds/worldSelect/objects/custumizer/characterButton/characterButton.tscn" type="PackedScene" id=9]
[ext_resource path="res://entities/player/powerStates/normal/sprites/alexandry/IDLE/lodrofoIdle.png" type="Texture" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 72, 16 )

[sub_resource type="StyleBoxFlat" id=4]
resource_local_to_scene = true
bg_color = Color( 0.713726, 0.988235, 1, 1 )
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color( 0.8, 0.8, 0.8, 0 )

[sub_resource type="StyleBoxFlat" id=5]
resource_local_to_scene = true
content_margin_left = 0.0
content_margin_right = 0.0
content_margin_top = 0.0
content_margin_bottom = 0.0
bg_color = Color( 0.0196078, 0.0117647, 0.0352941, 1 )
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color( 0.8, 0.8, 0.8, 0 )

[sub_resource type="StyleBoxFlat" id=6]
resource_local_to_scene = true
bg_color = Color( 0.51, 0.37723, 0.1479, 1 )
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color( 0.8, 0.8, 0.8, 0 )

[sub_resource type="StyleBoxFlat" id=7]
resource_local_to_scene = true
bg_color = Color( 0.2279, 0.53, 0.212, 1 )
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color( 0.8, 0.8, 0.8, 0 )

[sub_resource type="StyleBoxFlat" id=11]
resource_local_to_scene = true
content_margin_left = 0.0
content_margin_right = 0.0
content_margin_top = 0.0
content_margin_bottom = 0.0
bg_color = Color( 0.0196078, 0.0117647, 0.0352941, 1 )
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color( 0.8, 0.8, 0.8, 0 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 10 )
region = Rect2( 18, 5, 28, 35 )

[sub_resource type="ShaderMaterial" id=14]
shader = ExtResource( 4 )
shader_param/hue_shift = 0.0

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 5 )
region = Rect2( 2, 1, 28, 31 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 24, 27 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 8 )
region = Rect2( 48, 0, 24, 27 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 8 )
region = Rect2( 24, 0, 24, 27 )

[node name="custumizer" type="Area2D"]
collision_layer = 1024
collision_mask = 0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -16 )
shape = SubResource( 1 )

[node name="Custumizer" type="Sprite" parent="."]
position = Vector2( 0, -40 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
hframes = 2

[node name="interactBallon" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, -80 )
z_index = 0
areaInteractPath = NodePath("..")
content = [ "/btn:interact" ]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2
visible = false

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="background" type="ColorRect" parent="CanvasLayer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.611765 )

[node name="margin" type="MarginContainer" parent="CanvasLayer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 64
custom_constants/margin_top = 64
custom_constants/margin_left = 64
custom_constants/margin_bottom = 64

[node name="hbox" type="HBoxContainer" parent="CanvasLayer/Control/margin"]
margin_left = 64.0
margin_top = 64.0
margin_right = 1297.0
margin_bottom = 672.0
custom_constants/separation = 32

[node name="options" type="VBoxContainer" parent="CanvasLayer/Control/margin/hbox"]
margin_right = 560.0
margin_bottom = 608.0
custom_constants/separation = 32

[node name="Pallete" type="HBoxContainer" parent="CanvasLayer/Control/margin/hbox/options"]
margin_right = 560.0
margin_bottom = 128.0
custom_constants/separation = 16

[node name="colorButton" parent="CanvasLayer/Control/margin/hbox/options/Pallete" instance=ExtResource( 7 )]
margin_right = 128.0
margin_bottom = 128.0
custom_styles/panel = SubResource( 4 )
color = Color( 0.713726, 0.988235, 1, 1 )
toggled = true

[node name="colorButton2" parent="CanvasLayer/Control/margin/hbox/options/Pallete" instance=ExtResource( 7 )]
margin_left = 144.0
margin_right = 272.0
margin_bottom = 128.0
custom_styles/panel = SubResource( 5 )
color = Color( 0.508933, 0.198, 0.55, 1 )
hueShift = 90

[node name="colorButton4" parent="CanvasLayer/Control/margin/hbox/options/Pallete" instance=ExtResource( 7 )]
margin_left = 288.0
margin_right = 416.0
margin_bottom = 128.0
custom_styles/panel = SubResource( 6 )
color = Color( 0.51, 0.37723, 0.1479, 1 )
hueShift = 180

[node name="colorButton3" parent="CanvasLayer/Control/margin/hbox/options/Pallete" instance=ExtResource( 7 )]
margin_left = 432.0
margin_right = 560.0
margin_bottom = 128.0
custom_styles/panel = SubResource( 7 )
color = Color( 0.2279, 0.53, 0.212, 1 )
hueShift = 270

[node name="characterSelect" type="HBoxContainer" parent="CanvasLayer/Control/margin/hbox/options"]
margin_top = 160.0
margin_right = 560.0
margin_bottom = 288.0
custom_constants/separation = 16
alignment = 1

[node name="characterButton" parent="CanvasLayer/Control/margin/hbox/options/characterSelect" instance=ExtResource( 9 )]
margin_left = 144.0
margin_right = 272.0
custom_styles/panel = SubResource( 11 )
toggled = true

[node name="characterButton2" parent="CanvasLayer/Control/margin/hbox/options/characterSelect" instance=ExtResource( 9 )]
margin_left = 288.0
margin_right = 416.0
custom_styles/panel = SubResource( 11 )
spriteName = "alexandry"
texture = SubResource( 12 )

[node name="background" type="PanelContainer" parent="CanvasLayer/Control/margin/hbox"]
margin_left = 641.0
margin_right = 1153.0
margin_bottom = 608.0
rect_min_size = Vector2( 512, 0 )
size_flags_horizontal = 10
custom_styles/panel = ExtResource( 6 )

[node name="sprite" type="TextureRect" parent="CanvasLayer/Control/margin/hbox/background"]
material = SubResource( 14 )
margin_left = 16.0
margin_top = 16.0
margin_right = 496.0
margin_bottom = 592.0
texture = SubResource( 9 )
stretch_mode = 6

[node name="close" type="TextureButton" parent="CanvasLayer/Control/margin/hbox"]
margin_left = 1185.0
margin_right = 1233.0
margin_bottom = 54.0
rect_min_size = Vector2( 48, 54 )
size_flags_horizontal = 8
size_flags_vertical = 0
texture_normal = SubResource( 8 )
texture_pressed = SubResource( 13 )
texture_hover = SubResource( 10 )
texture_disabled = SubResource( 8 )
expand = true

[node name="Tween" type="Tween" parent="."]

[connection signal="entered" from="interactBallon" to="." method="_on_interactBallon_entered"]
[connection signal="exitered" from="interactBallon" to="." method="_on_interactBallon_exitered"]
[connection signal="interacted" from="interactBallon" to="." method="_on_interactBallon_interacted"]
[connection signal="selected" from="CanvasLayer/Control/margin/hbox/options/Pallete/colorButton" to="." method="selectedColor"]
[connection signal="selected" from="CanvasLayer/Control/margin/hbox/options/Pallete/colorButton2" to="." method="selectedColor"]
[connection signal="selected" from="CanvasLayer/Control/margin/hbox/options/Pallete/colorButton4" to="." method="selectedColor"]
[connection signal="selected" from="CanvasLayer/Control/margin/hbox/options/Pallete/colorButton3" to="." method="selectedColor"]
[connection signal="pressed" from="CanvasLayer/Control/margin/hbox/close" to="." method="_on_close_pressed"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
